--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -71,25 +71,37 @@
         </div>
 
         {% if myruns.has_other_pages %}
-            <ul class="pagination">
-            {% if myruns.has_previous %}
-                <li><a href="?page={{ myruns.previous_page_number }}">&laquo;</a></li>
-            {% else %}
-                <li class="disabled"><span>&laquo;</span></li>
-            {% endif %}
-            {% for i in myruns.paginator.page_range %}
-                {% if myruns.number == i %}
-                    <li class="active"><span>{{ i }}&nbsp;<span class="sr-only">(current)</span> </span> </li>
-                {% else %}
-                    <li><a href="?page={{ i }}">{{ i }}&nbsp;</a></li>
-                {% endif %}
-            {% endfor %}
-            {% if myruns.has_next %}
-                <li><a href="?page={{ myruns.next_page_number }}">&raquo;</a></li>
-            {% else %}
-                <li class="disabled"><span>&raquo;</span></li>
-            {% endif %}
-            </ul>
+            <nav aria-label="pagination">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item {% if myruns.number == 1 %}disabled{%endif%}">
+                        <a class="page-link" href="?page=1" aria-label="First">
+                        <span aria-hidden="true" class="fas fa-angle-double-left"></span>
+                        <span class="sr-only">First</span></a>
+                    </li>
+                    <li class="page-item {% if not myruns.has_previous %}disabled{%endif%}">
+                        <a class="page-link" href="?{% if myruns.has_previous %}page={{ myruns.previous_page_number }}{% endif %}" aria-label="Previous">
+                        <span aria-hidden="true" class="fas fa-angle-left"></span>
+                        <span class="sr-only">Previous</span></a>
+                    </li>
+                    {% for i in myruns.paginator.page_range %}
+                        {% if i <= myruns.number|add:8 and i >= myruns.number|add:-8 %}
+                            <li class="page-item {% if myruns.number == i %}active{% endif %}">
+                                <a class="page-link" href="?page={{ i }}">{{ i }} {% if myruns.number == i %}<span class="sr-only">(current)</span>{% endif %}</a>
+                            </li>
+                        {% endif %}
+                    {% endfor %}
+                    <li class="page-item {% if not myruns.has_next %}disabled{% endif %}">
+                        <a class="page-link" href="?{% if myruns.has_next %}page={{ myruns.next_page_number }}{% endif %}" aria-label="Next">
+                        <span aria-hidden="true" class="fas fa-angle-right"></span>
+                        <span class="sr-only">Next</span></a>
+                    </li>
+                    <li class="page-item {% if myruns.number == myruns.paginator.num_pages %}disabled{% endif %}">
+                        <a class="page-link" href="?page={{ myruns.paginator.num_pages }}" aria-label="Next">
+                        <span aria-hidden="true" class="fas fa-angle-double-right"></span>
+                        <span class="sr-only">Next</span></a>
+                    </li>
+                </ul>
+            </nav>
         {% endif %}
     </div>
 
