Fixing smos filters (misspelt variable name) and adapting test

--- a/validator/templates/validator/datasets.html
+++ b/validator/templates/validator/datasets.html
@@ -112,7 +112,7 @@
             <td>
                 <ul>
                     <li>Valid range: Filter soil moisture values to ensure they are between 0 and 1 m3 / m3.</li>
-                    <li>Soil moisture values are retrieved and recommended (Quality_flag == 0)</li>
+                    <li>Soil moisture values are retrieved and recommended (Quality_Flag == 0)</li>
                 </ul>
             </td>
         </tr>
