--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -43,7 +43,7 @@
                                 <strong>Status:</strong><br/>
                                 {% if valrun.progress == 0 and valrun.end_time == null %} Scheduled
                                 {% elif valrun.progress == 100 and valrun.end_time %} Done
-                                {% elif valrun.progress == -1 %} Aborted
+                                {% elif valrun.progress == -1 %} Cancelled
                                 {% elif valrun.end_time != null %} ERROR
                                 {% else %} Running ({{ valrun.progress }}&#37;)
                                 {% endif %}
@@ -52,7 +52,7 @@
                             <div class="col" style="text-align: right; max-width: 6.8rem;">
                                 <a class="btn btn-sm btn-primary btn-action" href="{% url 'result' valrun.id %}" title="View results"><span class="fas fa-folder-open"></span></a>
                                 {% if valrun.progress > -1 and valrun.progress < 100 and valrun.end_time == null %}
-                                <button class="btn btn-sm btn-primary btn-action" title="Stop validation" onclick="ajax_stop_validation('{{ valrun.id }}')"><span class="fas fa-stop"></span></button>
+                                <button class="btn btn-sm btn-primary btn-action" title="Cancel validation" onclick="ajax_stop_validation('{{ valrun.id }}')"><span class="fas fa-stop"></span></button>
                                 {% endif %}
                                 {% if valrun.end_time and valrun.output_file %}
                                     <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_dir_url }}graphs.zip" title="Download all graphs"><span class="fas fa-download"></span></a>
@@ -104,53 +104,6 @@
             </nav>
         {% endif %}
     </div>
-
-<!--     <table class="table table-striped">
-        <thead class="thead-dark">
-            <tr>
-                <th>Started</th>
-                <th>Name</th>
-                <th>Dataset</th>
-                <th>Reference</th>
-                <th>Status</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for valrun in myruns %}
-            <tr id="result_row_{{ valrun.id }}">
-                <td>{{ valrun.start_time }}</td>
-                <td>{{ valrun.name_tag }}</td>
-                <td>{{ valrun.data_dataset }} ({{ valrun.data_version }})</td>
-                <td>{{ valrun.ref_dataset }} ({{ valrun.ref_version }})</td>
-                <td {% if valrun.progress != 100 and valrun.end_time != null %}class="table-danger"{% endif %}>
-                    {% if valrun.progress == 0 and valrun.end_time == null %} Scheduled
-                    {% elif valrun.progress == 100 %} Done
-                    {% elif valrun.progress == -1 %} Aborted
-                    {% elif valrun.end_time != null %} ERROR
-                    {% else %} Running ({{ valrun.progress }}&#37;)
-                    {% endif %}
-                </td>
-                <td>
-                    <a class="btn btn-sm btn-primary btn-action" href="{% url 'result' valrun.id %}" title="View results"><span class="fas fa-folder-open"></span></a>
-                    {% if valrun.progress > -1 and valrun.progress < 100 and valrun.end_time == null %}
-                    <button class="btn btn-sm btn-primary btn-action" title="Stop validation" onclick="ajax_stop_validation('{{ valrun.id }}')"><span class="fas fa-stop"></span></button>
-                    {% endif %}
-                    {% if valrun.end_time and valrun.output_file %}
-                        <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_dir_url }}graphs.zip" title="Download all graphs"><span class="fas fa-download"></span></a>
-                        <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_file.url }}" title="Download NetCDF"><span class="fas fa-file-download"></span></a>
-                    {% endif %}
-
-                    {% if valrun.end_time %}
-                        <button class="btn btn-sm btn-primary btn-action" title="Remove result" onclick="ajax_delete_result('{{ valrun.id }}')"><span class="fas fa-times"></span></button>
-                    {% endif %}
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
- -->
-
 {% endblock %}
 
 {% block javascript %}
