--- a/validator/static/css/scheme.css
+++ b/validator/static/css/scheme.css
@@ -106,6 +106,8 @@ a:hover {
 }
 
 .scaled_image {
-    display: inline-block;
-    max-width:100%;
+    display: block;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
